# cellphone-detector

./: .gitignore  como_instalar_depencencias.md  explica_metricas.md  extrai.py  pyproject.toml  readme.md  teste_camera.py  train_test.ipynb
